# pdf2md

./: .gitignore  LICENSE  MODEL_EVALUATION.md  README.md  pdf2md.py  pyproject.toml  requirements.txt  setup.py
src/pdf2md/: app.py  app_cli.py  cover.py  detect.py  llm_client.py  marginchrome.py  media.py  pass2.py  phase1.py  phase2.py  phase25.py  postfix.py  prompt.py  replay.py  resolve.py  ui.py
src/pdf2md/prompt_templates/: convert_prompt_gfm.md  convert_prompt_qmd.md  cover_prompt.md  detect_prompt.md
src/pdf2md/render_assets/: _quarto.yml  _typst.yml
src/pdf2md/render_assets/_meta/theme/typst/: typst-show.typ  typst-template.typ
src/pdf2md/tablefix/: __init__.py  transforms.py
src/pdf2md/tablefix/_vendor/: fix_grid_stray_dividers.py  fix_pagebreaks.py  fix_table_colwidths.py  fix_typst_patterns.py
src/pdf2md/tests/: test_app.py  test_continuation.py  test_detect.py  test_estimate.py  test_find_quarto.py  test_guardrails.py  test_pdf2md.py  test_postfix.py  test_sse_decode.py  test_tablefix.py  test_template.py  test_text_coverage_matching.py  test_verify.py
src/pdf2md/verify/: __init__.py
src/pdf2md/verify/checks/: __init__.py  code_block_presence.py  figure_placement.py  footnote_placement.py  frontmatter.py  heading_hierarchy.py  link_preservation.py  math_presence.py  oversized_tables.py  structural_counts.py  table_coverage.py  text_coverage.py  wide_table_legibility.py
